@@ -9,6 +9,7 @@ t/00-load.t
 t/assert_all_keys_in.t
 t/assert_aoh.t
 t/assert_arrayref.t
+t/assert_arrayref_all.t
 t/assert_arrayref_nonempty.t
 t/assert_arrayref_of.t
 t/assert_cmp.t
